# showcase-microservices-rust

./: .gitignore  .hgignore  Makefile  README.adoc  schema.sql
todo-service-actix/: Cargo.toml
todo-service-actix/src/: main.rs
todo-service-spring-rs/: Cargo.toml
todo-service-spring-rs/src/: main.rs
