[package]
name = "todo-service-spring-rs"
version = "1.0.0"
edition = "2021"

[dependencies]
spring = "0.0.8"
spring-web = "0.0.8"
tokio = "1.3.9"
anyhow = "1.0.69"
serde = "1"
serde_json = "1"
jsonwebtoken = "8.3"
pem = "3.0"
lazy_static = "1.4"
axum-extra = { version = "0.9", features = ["typed-header"] }
tracing = "0.1.40"
